Lista de categorias index

--- a/spring-jobeet/src/main/webapp/css/jobs.css
+++ b/spring-jobeet/src/main/webapp/css/jobs.css
@@ -27,9 +27,14 @@
 {
 }
 
-.jobs tr:hover
+.jobs tr.even:hover
 {
   background-color: #fff;
+}
+
+.jobs tr.odd:hover
+{
+  background-color: #f3fafc;
 }
 
 .jobs td
