--- a/spring-jobeet/src/main/webapp/css/job.css
+++ b/spring-jobeet/src/main/webapp/css/job.css
@@ -51,6 +51,14 @@
   margin-right: 10px;
   padding: 5px;
   background: #fff;
+  max-width: 30%;
+  max-height: 30%;
+}
+
+.logo_compania{
+	float: right;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 #job_actions
