--- a/spring-jobeet/src/main/webapp/css/main.css
+++ b/spring-jobeet/src/main/webapp/css/main.css
@@ -255,6 +255,7 @@ body {
 	background: url(../legacy/images/bg-footer.jpg) repeat-x bottom;
 	padding-top: 10px;
 	position: relative;
+	clear: both;
 }
 
 #footer .content {
