--- a/spring-jobeet/src/main/webapp/css/main.css
+++ b/spring-jobeet/src/main/webapp/css/main.css
@@ -467,3 +467,31 @@ input[type=checkbox]:checked  ~ #detalleExcepcion {
 	width: 50%;
 	word-wrap: break-word;
 }
+
+.btn {
+  background: #1a567d;
+  background-image: -webkit-linear-gradient(top, #1a567d, #1a557a);
+  background-image: -moz-linear-gradient(top, #1a567d, #1a557a);
+  background-image: -ms-linear-gradient(top, #1a567d, #1a557a);
+  background-image: -o-linear-gradient(top, #1a567d, #1a557a);
+  background-image: linear-gradient(to bottom, #1a567d, #1a557a);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 15px;
+  padding: 5px 10px 5px 10px;
+  text-decoration: none;
+  margin-top: 15px;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
